# duckdb_s2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  extension_config.cmake  function-reference.md  test_local.sh  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
data/: README.md  cities.tsv  countries.tsv
docs/: .gitignore  README.md  duckdoc.py  function-reference.md  function-reference.md.jinja  render.py
scripts/: setup-custom-toolchain.sh
src/: function_builder.cpp  geography_extension.cpp  s2_accessors.cpp  s2_binary_index_ops.cpp  s2_bounds.cpp  s2_cell_ops.cpp  s2_data.cpp  s2_dependencies.cpp  s2_extension.cpp  s2_functions_io.cpp  s2_geography_ops.cpp  s2_point_ops.cpp  s2_predicates.cpp  s2_types.cpp
src/include/: function_builder.hpp  geography_extension.hpp  global_options.hpp  s2_cell_ops.hpp  s2_data.hpp  s2_data_static.hpp  s2_dependencies.hpp  s2_extension.hpp  s2_geography_ops.hpp  s2_geography_serde.hpp  s2_point_ops.hpp  s2_types.hpp  s2_versions.hpp
test/sql/: accessors.test  binary_index_ops.test  bounds.test  cell_ops.test  data.test  extension.test  functions_io.test  predicates.test  s2.test  s2_cell_ops.test  s2_functions_io.test  s2_point_ops.test  s2_predicates.test
test_data/: test_data.ipynb
vcpkg_ports/abseil/: portfile.cmake  vcpkg.json
